# canvasXmcp

./: .gitignore  README.md  aws.py  debug.py  main.py  pyproject.toml  test.py  token_usage.jsonl  view_costs.py
Reports/Proposal/: main.aux  main.bbl  main.blg  main.out  main.tex  ref.bib
src/agent/: canvas_agent.py
src/canvas/: __init__.py  client.py  models.py
src/mcp/: canvas_server.py
src/ui/: app.py
src/utils/: token_tracker.py
tests/: test_agent.py  test_canvas.py
